# compact-rc

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: arc.rs  base.rs  lib.rs  macros.rs  maybe_fat.rs  rc.rs  refcount.rs  serde.rs
