[package]
name = "compact-rc"
version = "0.5.3"
edition = "2021"
authors = ["Akira Mizuno <akmizno@gmail.com>"]
description = "Low-memory reference-counting pointers"
keywords = ["arc", "rc", "data-structure"]
categories = ["data-structures"]
repository = "https://github.com/akmizno/compact-rc"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
dropcount = "0.1"
